--- a/sugerencias.html
+++ b/sugerencias.html
@@ -6,14 +6,85 @@
     <title>Sugerencias - Hernavia</title>
     <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-    <!-- CSS no bloqueante -->
-    <link rel="preload" href="estilo.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="estilo.css"></noscript>
-
+    <link rel="stylesheet" href="estilo.css">
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
+
+    <style>
+        section.sugerencias {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-left: 8px solid #006A44;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        form {
+            max-width: 600px;
+            margin: 20px auto;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        form input, form textarea {
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 1em;
+        }
+
+        form button {
+            padding: 12px;
+            background-color: #006A44;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        form button:hover {
+            background-color: #004a2d;
+        }
+
+        label { font-weight: bold; }
+
+        .frase-futuro {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 1.1em;
+            font-weight: bold;
+            margin-top: 20px;
+            margin-bottom: 15px;
+        }
+
+        .frase-futuro img {
+            width: 32px;
+            height: 32px;
+            aspect-ratio: 1/1;
+        }
+
+        .audio-boton {
+            background-color: #006A44;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 14px;
+            cursor: pointer;
+            font-size: 0.9em;
+            transition: background-color 0.3s ease;
+        }
+
+        .audio-boton:hover {
+            background-color: #004a2d;
+        }
+    </style>
 </head>
 
 <body>
@@ -34,21 +105,18 @@
 </nav>
 
 <main role="main">
-    <section class="sugerencias" style="min-height: 300px;">
+    <section class="sugerencias">
         <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor envíanos un mensaje:</p>
 
-        <div class="frase-futuro" style="display:flex; align-items:center; gap:8px; font-size:1.1em; font-weight:bold; margin-top:20px; margin-bottom:15px;">
-            <img src="img/puedenideas.png" alt="Icono ideas" width="32" height="32" style="flex-shrink:0;">
+        <div class="frase-futuro">
+            <img src="img/puedenideas.png" alt="Icono ideas" width="32" height="32" loading="eager">
             ¿Puedes cambiar el futuro?
         </div>
 
-        <button class="audio-boton" style="background-color:#006A44;color:white;border:none;border-radius:5px;padding:8px 14px;cursor:pointer;font-size:0.9em;transition:background-color 0.3s ease;margin-bottom:15px;"
-                onclick="document.getElementById('audio-futuro').play()">
-            ▶ ¿?
-        </button>
-        <audio id="audio-futuro" src="futuro.mp3" preload="auto" style="display:block;height:32px;visibility:hidden;"></audio>
+        <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ ¿?</button>
+        <audio id="audio-futuro" src="futuro.mp3" preload="auto"></audio>
 
-        <form action="https://formspree.io/f/xldpgjop" method="POST" style="max-width:600px;margin:20px auto;display:flex;flex-direction:column;gap:15px;">
+        <form action="https://formspree.io/f/xldpgjop" method="POST">
             <label for="nombre">Nombre (opcional):</label>
             <input type="text" id="nombre" name="nombre">
 
@@ -61,8 +129,8 @@
             <label for="mensaje">Mensaje:</label>
             <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
 
-            <p style="text-align:center;">
-                <button type="submit" style="padding:12px;background-color:#006A44;color:white;border:none;border-radius:5px;cursor:pointer;font-weight:bold;transition:background-color 0.3s ease;">Enviar sugerencia</button>
+            <p style="text-align:center; margin-top:20px;">
+                <button type="submit">Enviar sugerencia</button>
             </p>
         </form>
 
@@ -72,7 +140,7 @@
     </section>
 </main>
 
-<footer>
+<footer role="contentinfo">
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
