--- a/sugerencias.html
+++ b/sugerencias.html
@@ -1,94 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sugerencias - Hernavia</title>
-    <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sugerencias - Hernavia</title>
+<meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
 
-    <style>
-        section.sugerencias {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            border-left: 8px solid #006A44;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
+<!-- CSS no bloqueante -->
+<link rel="preload" href="estilo.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="estilo.css"></noscript>
 
-        form {
-            max-width: 600px;
-            margin: 20px auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
+<link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Proyecto Hernavia">
 
-        form input, form textarea {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 1em;
-        }
+<!-- Preconnect a Formspree -->
+<link rel="preconnect" href="https://formspree.io" crossorigin>
 
-        form button {
-            padding: 12px;
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-
-        form button:hover {
-            background-color: #004a2d;
-        }
-
-        label { font-weight: bold; }
-
-        .frase-futuro {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 1.1em;
-            font-weight: bold;
-            margin-top: 20px;
-            margin-bottom: 15px;
-        }
-
-        .frase-futuro img {
-            width: 32px;
-            height: 32px;
-            aspect-ratio: 1/1;
-        }
-
-        .audio-boton {
-            background-color: #006A44;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 14px;
-            cursor: pointer;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
-        }
-
-        .audio-boton:hover {
-            background-color: #004a2d;
-        }
-    </style>
+<style>
+section.sugerencias { max-width: 900px; margin: 20px auto; padding: 20px; background:white; border-left:8px solid #006A44; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.1); min-height:300px; }
+form { max-width:600px; margin:20px auto; display:flex; flex-direction:column; gap:15px; }
+form input, form textarea { padding:10px; border-radius:5px; border:1px solid #ccc; font-size:1em; }
+form button { padding:12px; background-color:#006A44; color:white; border:none; border-radius:5px; cursor:pointer; font-weight:bold; transition:background-color 0.3s ease; }
+form button:hover { background-color:#004a2d; }
+label { font-weight:bold; }
+.frase-futuro { display:flex; align-items:center; gap:8px; font-size:1.1em; font-weight:bold; margin-top:20px; margin-bottom:15px; min-height:40px; }
+.frase-futuro img { width:32px; height:32px; }
+.audio-boton { background-color:#006A44; color:white; border:none; border-radius:5px; padding:8px 14px; cursor:pointer; font-size:0.9em; transition: background-color 0.3s ease; }
+.audio-boton:hover { background-color:#004a2d; }
+</style>
 </head>
 
 <body>
-
 <header>
     <h1>Envíanos tus sugerencias</h1>
 </header>
@@ -104,45 +48,51 @@
     <a href="noticias-random.html">Noticias Random</a>
 </nav>
 
-<main role="main">
-    <section class="sugerencias">
-        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, por favor envíanos un mensaje:</p>
+<main>
+<section class="sugerencias">
+<p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, envíanos un mensaje:</p>
 
-        <div class="frase-futuro">
-            <img src="img/puedenideas.png" alt="Icono ideas" width="32" height="32" loading="eager">
-            ¿Puedes cambiar el futuro?
-        </div>
+<div class="frase-futuro">
+    <img src="img/puedenideas.png" alt="Icono ideas" loading="lazy">
+    ¿Puedes cambiar el futuro?
+</div>
 
-        <button class="audio-boton" onclick="document.getElementById('audio-futuro').play()">▶ ¿?</button>
-        <audio id="audio-futuro" src="futuro.mp3" preload="auto"></audio>
+<button class="audio-boton" id="play-audio">▶ ¿?</button>
+<audio id="audio-futuro" src="futuro.mp3" preload="auto"></audio>
 
-        <form action="https://formspree.io/f/xldpgjop" method="POST">
-            <label for="nombre">Nombre (opcional):</label>
-            <input type="text" id="nombre" name="nombre">
+<form action="https://formspree.io/f/xldpgjop" method="POST">
+    <label for="nombre">Nombre (opcional):</label>
+    <input type="text" id="nombre" name="nombre">
 
-            <label for="correo">Correo (opcional):</label>
-            <input type="email" id="correo" name="correo">
+    <label for="correo">Correo (opcional):</label>
+    <input type="email" id="correo" name="correo">
 
-            <label for="asunto">Asunto:</label>
-            <input type="text" id="asunto" name="asunto" required>
+    <label for="asunto">Asunto:</label>
+    <input type="text" id="asunto" name="asunto" required>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+    <label for="mensaje">Mensaje:</label>
+    <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
 
-            <p style="text-align:center; margin-top:20px;">
-                <button type="submit">Enviar sugerencia</button>
-            </p>
-        </form>
+    <p style="text-align:center; margin-top:20px;">
+        <button type="submit">Enviar sugerencia</button>
+    </p>
+</form>
 
-        <p>O también puedes visitar nuestras redes sociales:</p>
-        <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">https://www.instagram.com/hernaviaoficial</a></p>
-        <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">https://www.youtube.com/@Hernaviaoficial</a></p>
-    </section>
+<p>O también puedes visitar nuestras redes sociales:</p>
+<p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">Instagram Hernavia</a></p>
+<p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">YouTube Hernavia</a></p>
+</section>
 </main>
 
-<footer role="contentinfo">
-    &copy; 2025 Hernavia - Proyecto Cultural
+<footer>
+    &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
+
+<script defer>
+document.getElementById('play-audio').addEventListener('click', ()=> {
+    document.getElementById('audio-futuro').play();
+});
+</script>
 
 </body>
 </html>
