--- a/sugerencias.html
+++ b/sugerencias.html
@@ -5,49 +5,100 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sugerencias - Hernavia</title>
 <meta name="description" content="Envía tus ideas y sugerencias para mejorar Hernavia. Participa activamente en este proyecto cultural.">
-<meta name="theme-color" content="#006A44">
-<meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable">
-
 <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
 
-<!-- CSS crítico embebido -->
-<style>
-html,body{margin:0;padding:0;font-family:system-ui,sans-serif;background:white;}
-h1{margin:1em auto;text-align:center;color:#004a2d;}
-.nav-comun{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;background:#006A44;padding:10px;}
-.nav-comun a{color:white;text-decoration:none;font-weight:bold;}
-.nav-comun a:hover{text-decoration:underline;}
-section.sugerencias{max-width:900px;margin:20px auto;padding:20px;background:white;border-left:8px solid #006A44;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,0.1);min-height:300px;}
-form{max-width:600px;margin:20px auto;display:flex;flex-direction:column;gap:15px;}
-form input,form textarea{padding:10px;border-radius:5px;border:1px solid #ccc;font-size:1em;}
-form button{padding:12px;background-color:#006A44;color:white;border:none;border-radius:5px;cursor:pointer;font-weight:bold;transition:background-color .3s ease;}
-form button:hover{background-color:#004a2d;}
-label{font-weight:bold;}
-.frase-futuro{display:flex;align-items:center;gap:8px;font-size:1.1em;font-weight:bold;margin-top:20px;margin-bottom:15px;min-height:40px;}
-.frase-futuro img{width:32px;height:32px;flex-shrink:0;}
-.audio-boton{background-color:#006A44;color:white;border:none;border-radius:5px;padding:8px 14px;cursor:pointer;font-size:0.9em;transition:background-color .3s ease;}
-.audio-boton:hover{background-color:#004a2d;}
-footer{text-align:center;margin:30px 0;color:#555;}
-</style>
-
-<!-- CSS completo cargado de forma no bloqueante -->
-<link rel="preload" href="estilo.css?v=3" as="style" onload="this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="estilo.css?v=3"></noscript>
+<!-- Carga no bloqueante del CSS -->
+<link rel="preload" href="estilo.css" as="style">
+<link rel="stylesheet" href="estilo.css">
 
 <link rel="canonical" href="https://hernavia.github.io/Hernavia/sugerencias.html">
 <meta name="robots" content="index, follow">
 <meta name="author" content="Proyecto Hernavia">
 
-<!-- Preconnect a Formspree -->
-<link rel="preconnect" href="https://formspree.io" crossorigin>
-<link rel="prefetch" href="futuro.mp3" as="audio">
-<link rel="prefetch" href="img/puedenideas.png" as="image">
+<style>
+body {
+  background-color: #f4f4f4;
+}
 
+.section {
+  max-width: 900px;
+  margin: 25px auto;
+  padding: 25px;
+  background-color: white !important;
+  border-left: 8px solid #006A44;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  min-height: 150px;
+}
+
+form {
+  max-width: 600px;
+  margin: 20px auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+form input, form textarea {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1em;
+}
+
+form button {
+  padding: 12px;
+  background-color: #006A44;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+form button:hover {
+  background-color: #004a2d;
+}
+
+label { font-weight: bold; }
+
+.audio-boton {
+  padding: 10px 15px;
+  background-color: #006A44;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9em;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.audio-boton:hover {
+  background-color: #004a2d;
+}
+
+.frase {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 20px 0;
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.frase img {
+  width: 32px;
+  height: 32px;
+}
+</style>
 </head>
 
 <body>
 <header>
-  <h1>Envíanos tus sugerencias</h1>
+  <h1>Envía tus sugerencias</h1>
 </header>
 
 <nav class="nav-comun">
@@ -61,17 +112,16 @@ footer{text-align:center;margin:30px 0;color:#555;}
   <a href="noticias-random.html">Noticias Random</a>
 </nav>
 
-<main>
-<section class="sugerencias">
-  <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia o simplemente una pregunta, envíanos un mensaje:</p>
+<section class="section">
+  <p>Si tienes ideas, sugerencias o detectas algo que podríamos mejorar en Hernavia, usa este formulario para comunicarte con nosotros:</p>
 
-  <div class="frase-futuro">
+  <div class="frase">
     <img src="img/puedenideas.png" alt="Icono ideas" width="32" height="32" loading="lazy">
-    ¿Puedes cambiar el futuro?
+    <span>¿Puedes cambiar el futuro?</span>
   </div>
 
-  <button class="audio-boton" id="play-audio">▶ ¿?</button>
-  <audio id="audio-futuro" src="futuro.mp3" preload="auto"></audio>
+  <button class="audio-boton" id="play-audio">▶ Escuchar</button>
+  <audio id="audio-futuro" src="futuro.mp3" preload="none"></audio>
 
   <form action="https://formspree.io/f/xldpgjop" method="POST">
     <label for="nombre">Nombre (opcional):</label>
@@ -86,26 +136,25 @@ footer{text-align:center;margin:30px 0;color:#555;}
     <label for="mensaje">Mensaje:</label>
     <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
 
-    <p style="text-align:center; margin-top:20px;">
-      <button type="submit">Enviar sugerencia</button>
-    </p>
+    <button type="submit">Enviar sugerencia</button>
   </form>
-
-  <p>O también puedes visitar nuestras redes sociales:</p>
-  <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank" rel="noopener">Instagram Hernavia</a></p>
-  <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank" rel="noopener">YouTube Hernavia</a></p>
 </section>
-</main>
+
+<section class="section">
+  <h2>También puedes seguirnos</h2>
+  <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">Instagram Hernavia</a></p>
+  <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">YouTube Hernavia</a></p>
+</section>
 
 <footer>
   &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
 
-<script defer>
-document.getElementById('play-audio').addEventListener('click', ()=> {
-  document.getElementById('audio-futuro').play();
+<script>
+document.getElementById('play-audio').addEventListener('click', () => {
+  const audio = document.getElementById('audio-futuro');
+  audio.play();
 });
 </script>
-
 </body>
 </html>
