--- a/index.html
+++ b/index.html
@@ -67,6 +67,84 @@
       </ul>
     </section>
   </main>
+<section class="section">
+  <h2 style="text-align:center; color:#006A44; margin-bottom:20px;">Preguntas Frecuentes</h2>
+
+  <div class="faq-container">
+
+    <details class="faq-card">
+      <summary>¿Cómo los puedo contactar?</summary>
+      <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
+    </details>
+
+    <details class="faq-card">
+      <summary>¿Por qué “Arconte”?</summary>
+      <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
+    </details>
+
+    <details class="faq-card">
+      <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
+      <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
+    </details>
+
+    <details class="faq-card">
+      <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
+      <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
+    </details>
+
+    <details class="faq-card">
+      <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
+      <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
+    </details>
+
+    <details class="faq-card">
+      <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
+      <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
+    </details>
+
+  </div>
+</section>
+
+<style>
+.faq-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.faq-card {
+  background-color: white;
+  border: 2px solid #006A44;
+  border-radius: 10px;
+  padding: 15px 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.faq-card summary {
+  font-weight: bold;
+  color: #006A44;
+  font-size: 1.1em;
+  list-style: none;
+  outline: none;
+}
+
+.faq-card summary::marker {
+  display: none;
+}
+
+.faq-card[open] {
+  background-color: #f4fff9;
+  border-color: #004a2d;
+}
+
+.faq-card p {
+  margin-top: 10px;
+  color: #333;
+  line-height: 1.5;
+}
+</style>
 
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
@@ -83,3 +161,4 @@
   </script>
 </body>
 </html>
+
