--- a/index.html
+++ b/index.html
@@ -67,44 +67,6 @@
       </ul>
     </section>
   </main>
-<section class="section">
-  <h2 style="text-align:center; color:#006A44; margin-bottom:20px;">Preguntas Frecuentes</h2>
-
-  <div class="faq-container">
-
-    <details class="faq-card">
-      <summary>¿Cómo los puedo contactar?</summary>
-      <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Por qué “Arconte”?</summary>
-      <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
-      <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
-      <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
-      <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
-      <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
-    </details>
-
-  </div>
-</section>
-
 <style>
 .faq-container {
   display: flex;
@@ -116,7 +78,7 @@
   background-color: white;
   border: 2px solid #006A44;
   border-radius: 10px;
-  padding: 15px 20px;
+  padding: 25px 20px; /* ← aumentamos área clickeable */
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -125,7 +87,7 @@
 .faq-card summary {
   font-weight: bold;
   color: #006A44;
-  font-size: 1.1em;
+  font-size: 1.2em; /* ← texto más grande */
   list-style: none;
   outline: none;
 }
@@ -146,6 +108,16 @@
 }
 </style>
 
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/Hernavia/sw.js')
+        .then(reg => console.log(' Service Worker registrado:', reg.scope))
+        .catch(err => console.error('Error al registrar el SW:', err));
+    });
+  }
+</script>
+
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
@@ -161,4 +133,5 @@
   </script>
 </body>
 </html>
+
 
