--- a/index.html
+++ b/index.html
@@ -67,56 +67,47 @@
       </ul>
     </section>
   </main>
-<style>
-.faq-container {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
 
-.faq-card {
-  background-color: white;
-  border: 2px solid #006A44;
-  border-radius: 10px;
-  padding: 25px 20px; /* ← aumentamos área clickeable */
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-
-.faq-card summary {
-  font-weight: bold;
-  color: #006A44;
-  font-size: 1.2em; /* ← texto más grande */
-  list-style: none;
-  outline: none;
-}
-
-.faq-card summary::marker {
-  display: none;
-}
-
-.faq-card[open] {
-  background-color: #f4fff9;
-  border-color: #004a2d;
-}
-
-.faq-card p {
-  margin-top: 10px;
-  color: #333;
-  line-height: 1.5;
-}
-</style>
-
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/Hernavia/sw.js')
-        .then(reg => console.log(' Service Worker registrado:', reg.scope))
-        .catch(err => console.error('Error al registrar el SW:', err));
-    });
+  <style>
+  .faq-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
   }
-</script>
+
+  .faq-card {
+    background-color: white;
+    border: 2px solid #006A44;
+    border-radius: 10px;
+    padding: 25px 20px; /* área clickeable más grande */
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  }
+
+  .faq-card summary {
+    font-weight: bold;
+    color: #006A44;
+    font-size: 1.2em; /* texto más grande */
+    list-style: none;
+    outline: none;
+  }
+
+  .faq-card summary::marker {
+    display: none;
+  }
+
+  .faq-card[open] {
+    background-color: #f4fff9;
+    border-color: #004a2d;
+  }
+
+  .faq-card p {
+    margin-top: 10px;
+    color: #333;
+    line-height: 1.5;
+  }
+  </style>
 
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
@@ -126,12 +117,11 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/Hernavia/sw.js')
-          .then(reg => console.log(' Service Worker registrado:', reg.scope))
+          .then(reg => console.log('Service Worker registrado:', reg.scope))
           .catch(err => console.error('Error al registrar el SW:', err));
       });
     }
   </script>
+
 </body>
 </html>
-
-
