--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@
   <section class="section">
     <h2 style="text-align:center; color:#006A44; margin-bottom:20px;">Preguntas Frecuentes</h2>
 
-    <!-- Botón para desplegar -->
     <div style="text-align:center;">
-      <button id="mostrarPreguntas" class="faq-toggle-btn">Mostrar Preguntas</button>
+      <button id="mostrarPreguntas" class="btn-link">Mostrar Preguntas</button>
     </div>
 
-    <!-- Contenedor oculto de preguntas -->
-    <div class="faq-container" id="faqContainer" style="display:none; margin-top:20px;">
+    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
       <details class="faq-card">
         <summary>¿Cómo los puedo contactar?</summary>
@@ -114,22 +112,6 @@
   </section>
 
   <style>
-  .faq-toggle-btn {
-    background-color: #006A44;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 10px;
-    font-size: 1.2em;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-  }
-
-  .faq-toggle-btn:hover {
-    background-color: #004a2d;
-    transform: scale(1.03);
-  }
-
   .faq-container {
     display: flex;
     flex-direction: column;
@@ -168,6 +150,24 @@
     color: #333;
     line-height: 1.5;
   }
+
+  .btn-link {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 12px 25px;
+    background-color: #006A44;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 1.1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-link:hover {
+    background-color: #004a2d;
+  }
   </style>
 
   <footer>
@@ -175,15 +175,15 @@
   </footer>
 
   <script>
-    // Mostrar/ocultar preguntas frecuentes
-    const btn = document.getElementById('mostrarPreguntas');
+    // Mostrar/ocultar preguntas
+    const boton = document.getElementById('mostrarPreguntas');
     const faq = document.getElementById('faqContainer');
     let visible = false;
 
-    btn.addEventListener('click', () => {
+    boton.addEventListener('click', () => {
       visible = !visible;
       faq.style.display = visible ? 'block' : 'none';
-      btn.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
+      boton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
     });
 
     // Registrar Service Worker
