--- a/index.html
+++ b/index.html
@@ -60,109 +60,47 @@
       </ul>
     </section>
   </main>
+<style>
+.faq-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 
-  <!-- Preguntas Frecuentes -->
-  <section class="section">
-    <h2 style="text-align:center; color:#A47A00; margin-bottom:20px;">Preguntas Frecuentes</h2>
+.faq-card {
+  background-color: white;
+  border: 2px solid #006A44;
+  border-radius: 10px;
+  padding: 25px 20px; /* ← aumentamos área clickeable */
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
 
-    <div style="text-align:center;">
-      <button id="mostrarPreguntas" class="btn-link">Mostrar Preguntas</button>
-    </div>
+.faq-card summary {
+  font-weight: bold;
+  color: #006A44;
+  font-size: 1.2em; /* ← texto más grande */
+  list-style: none;
+  outline: none;
+}
 
-    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+.faq-card summary::marker {
+  display: none;
+}
 
-      <details class="faq-card">
-        <summary>¿Cómo los puedo contactar?</summary>
-        <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o por nuestras redes sociales. Los mensajes llegan directamente al equipo de Hernavia.</p>
-      </details>
+.faq-card[open] {
+  background-color: #f4fff9;
+  border-color: #004a2d;
+}
 
-      <details class="faq-card">
-        <summary>¿Por qué “Arconte”?</summary>
-        <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
-        <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
-        <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
-        <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
-        <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
-      </details>
-
-    </div>
-  </section>
-
-  <style>
-  .faq-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .faq-card {
-    background-color: #fffbea;
-    border: 2px solid #d4b100;
-    border-radius: 10px;
-    padding: 15px 18px; /* más compacto */
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-  }
-
-  .faq-card summary {
-    font-weight: 600;
-    color: #a47a00;
-    font-size: 1.1em;
-    list-style: none;
-    outline: none;
-  }
-
-  .faq-card summary::marker {
-    display: none;
-  }
-
-  .faq-card[open] {
-    background-color: #fff6cc;
-    border-color: #bfa200;
-  }
-
-  .faq-card p {
-    margin-top: 8px;
-    color: #333;
-    line-height: 1.4;
-  }
-
-  .btn-link {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 12px 25px;
-    background-color: #d4b100;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-weight: bold;
-    font-size: 1.1em;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  .btn-link:hover {
-    background-color: #bfa200;
-  }
-  </style>
-
+.faq-card p {
+  margin-top: 10px;
+  color: #333;
+  line-height: 1.5;
+}
+</style>
+ 
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
@@ -191,3 +129,4 @@
 
 </body>
 </html>
+
